# cross-tx-pma-detector

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
config/chains/: bsc.yaml  ethereum.yaml
scripts/: build_graphs.py  collect_data.py  evaluate.py  train.py
src/analysis/: attack_analysis.py
src/clustering/: address_clustering.py
src/data_collector/: collector.py  events.py  labels.py  storage.py
src/graph_builder/: builder.py  features.py
src/model/: evaluate.py  losses.py  temporal_gnn.py  train.py
src/utils/: config.py
